[Feature] Реализовал прототип приложения, корректная подстановка значений в placeholders